<resources>
    <string name="app_name">Vinyls_Jetpack_Application</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="collector_name_placeholder">Nombre del coleccionista</string>
    <string name="collector_email_placeholder">Correo del coleccionista</string>
    <string name="collector_phone_placeholder">Número telefónico</string>
    <string name="comment_rating_placeholder">##</string>
    <string name="comment_description_placeholder">Descripción del comentario</string>
    <string name="album_name_placeholder">Nombre del álbum</string>
    <string name="album_description_placeholder">Descripción del álbum</string>
    <string name="txt_no_comments">No hay comentarios para este álbum</string>
    <string name="title_home">Incio</string>
    <string name="title_albums">Álbumes</string>
    <string name="title_tracks">Canciones</string>
    <string name="title_artists">Artistas</string>
    <string name="title_collectors">Coleccionistas</string>
    <string name="title_comments">Comentarios del álbum</string>
    <string name="album_release_date">Fecha</string>
    <string name="album_genre">Género</string>
    <string name="album_record_label">Discografía</string>
    <string name="track_duration">Duración</string>
    <string name="artist_birthday">Cumpleaños</string>
    <string name="cover_album">Cover album</string>
    <string name="artist_image">Artist image</string>
    <string name="home_page">Página de inicio</string>
    <string name="collector_image">Imagen coleccionista</string>
    <string name="track_image">Imagen canción</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_album_create">Nuevo Álbum</string>
    <string name="album_name">Nombre</string>
    <string name="cover_url">URL portada</string>
    <string name="album_create_release_date">Fecha</string>
    <string name="album_create_description">Descripción</string>
    <string name="genre">Género</string>
    <string name="album_create_record_label">Discografía</string>
    <string name="album_create_button">Crear álbum</string>
    <string name="label_email">Correo eléctronico</string>
    <string name="label_phone">Teléfono</string>
    <string name="associate_track">Asociar track</string>
    <string name="collector_image_in_associate">Collector Image in Associate</string>
    <string name="label_duration">Duración</string>
    <string name="btn_associate_track">Asociar Track</string>
    <string name="collector_image_in_associate">Collector Image in Associate</string>
</resources>