<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/albumFragment">
    <fragment
        android:id="@+id/page_inicio"
        android:name="com.example.vinilosapp.view.InicioFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_inicio" >
    </fragment>
    <fragment
        android:id="@+id/albumFragment"
        android:name="com.example.vinilosapp.view.AlbumFragment"
        android:label="@string/title_albums"
        tools:layout="@layout/album_fragment" >
        <action
            android:id="@+id/action_albumFragment_to_albumDetailFragment"
            app:destination="@id/albumDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/albumDetailFragment"
        android:name="com.example.vinilosapp.view.AlbumDetailFragment"
        tools:layout="@layout/album_detail_fragment" >
        <argument
            android:name="albumId"
            app:argType="integer" />
        <action
            android:id="@+id/action_albumDetailFragment_to_albumFragment"
            app:destination="@id/albumFragment" />
    </fragment>
    <fragment
        android:id="@+id/artistFragment"
        android:name="com.example.vinilosapp.view.ArtistFragment"
        android:label="@string/title_artists"
        tools:layout="@layout/artist_fragment" >
        <action
            android:id="@+id/action_artistFragment_to_artistDetailFragment"
            app:destination="@id/artistDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/artistDetailFragment"
        android:name="com.example.vinilosapp.view.ArtistDetailFragment"
        android:label="@string/title_home"
        tools:layout="@layout/artist_detail_fragment" >
        <action
            android:id="@+id/action_albumFragment_to_albumDetailFragment"
            app:destination="@id/albumDetailFragment" />
        <argument
            android:name="artistId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/collectorsFragment"
        android:name="com.example.vinilosapp.view.CollectorFragment"
        android:label="Colleccionistas"
        tools:layout="@layout/collector_fragment" >
    </fragment>
</navigation>