<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="album" type="com.example.vinilosapp.models.Album"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:elevation="4dp"
        android:radius="16dp"
        android:padding="16dp"
        android:background="#E0F7FA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:radius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/stroke_color"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="3dp"
                    android:text="@{album.name}"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/albumDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="8dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="3dp"
                    android:text="@{album.description}"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/labelReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="8dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="3dp"
                    android:text="@string/album_release_date"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="8dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="3dp"
                    android:text="@{album.releaseDate.substring(0,10)}"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/labelRecord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="8dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="3dp"
                    android:text="@string/album_record_label"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textRecord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="8dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="3dp"
                    android:text="@{album.recordLabel}"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/labelGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="8dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="3dp"
                    android:text="@string/album_genre"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="8dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="3dp"
                    android:text="@{album.genre}"
                    android:textColor="@color/black" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>